# scModelForge

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
configs/examples/: geneformer_basic.yaml
configs/recipes/: batch_integration.yaml  cell_type_annotation.yaml  perturbation_prediction.yaml
docs/: architecture.md  changelog.md  cli.md  conf.py  getting_started.md  index.md
docs/api/: config.md  data.md  eval.md  finetuning.md  models.md  tokenizers.md  training.md
docs/apidocs/: index.rst
docs/apidocs/scmodelforge/: scmodelforge._constants.md  scmodelforge._types.md  scmodelforge.cli.md  scmodelforge.config.md  scmodelforge.config.schema.md  scmodelforge.data._utils.md  scmodelforge.data.anndata_store.md  scmodelforge.data.census.md  scmodelforge.data.dataloader.md  scmodelforge.data.dataset.md  scmodelforge.data.gene_vocab.md  scmodelforge.data.md  scmodelforge.data.preprocessing.md  scmodelforge.eval._utils.md  scmodelforge.eval.base.md  scmodelforge.eval.callback.md  scmodelforge.eval.embedding_quality.md  scmodelforge.eval.harness.md  scmodelforge.eval.linear_probe.md  scmodelforge.eval.md  scmodelforge.eval.perturbation.md  scmodelforge.eval.registry.md  scmodelforge.finetuning._utils.md  scmodelforge.finetuning.adapters.md  scmodelforge.finetuning.data_module.md  scmodelforge.finetuning.heads.md  scmodelforge.finetuning.lightning_module.md  scmodelforge.finetuning.md  scmodelforge.finetuning.model.md  scmodelforge.finetuning.pipeline.md  scmodelforge.md  scmodelforge.models._utils.md  scmodelforge.models.autoregressive.md  scmodelforge.models.components.attention.md  scmodelforge.models.components.embeddings.md  scmodelforge.models.components.heads.md  scmodelforge.models.components.md  scmodelforge.models.components.pooling.md  scmodelforge.models.masked_autoencoder.md  scmodelforge.models.md  (+18 more)
docs/tutorials/: custom_benchmark.md  custom_model.md  custom_tokenizer.md  data_loading.md  distributed_training.md  evaluation.md  finetuning_cell_type.md  hub_models.md  index.md  large_scale_data.md  multi_species.md  perturbation_prediction.md  plugin_development.md  pretraining.md  quickstart.md  scverse_integration.md  tokenization_guide.md
plans/: overall_plan.md  stage_0_scaffolding.md  stage_1_data.md  stage_2_tokenizers.md  stage_3_models.md  stage_4_training.md  stage_5_eval.md
prompts/: analyze_architecture.md  implement_benchmark.md  implement_component.md  implement_model.md  implement_tokenizer.md
src/scmodelforge/: __init__.py  _constants.py  _plugins.py  _types.py  cli.py
src/scmodelforge/config/: __init__.py  schema.py
src/scmodelforge/data/: __init__.py  _utils.py  anndata_store.py  census.py  cloud.py  dataloader.py  dataset.py  distributed.py  gene_selection.py  gene_vocab.py  memmap_store.py  ortholog_mapper.py  perturbation.py  preprocess.py  preprocessing.py  sampling.py  sharding.py  streaming.py
src/scmodelforge/eval/: __init__.py  _utils.py  base.py  callback.py  cz_benchmarks.py  embedding_quality.py  grn.py  harness.py  linear_probe.py  perturbation.py  registry.py
src/scmodelforge/finetuning/: __init__.py  _utils.py  adapters.py  data_module.py  heads.py  lightning_module.py  model.py  pipeline.py
src/scmodelforge/models/: __init__.py  _utils.py  autoregressive.py  hub.py  masked_autoencoder.py  protocol.py  registry.py  transformer_encoder.py
src/scmodelforge/tokenizers/: __init__.py  _utils.py  base.py  binned_expression.py  continuous_projection.py  gene_embedding.py  masking.py  rank_value.py  registry.py
src/scmodelforge/training/: __init__.py  _utils.py  callbacks.py  fsdp.py  (+4 more)
tests/: conftest.py  test_config.py  test_plugins.py  test_smoke.py
tests/test_data/: test_census.py  test_cloud.py  test_dataloader.py  test_dataset.py  test_distributed.py  test_gene_selection.py  test_gene_vocab.py  test_memmap_store.py  test_ortholog_mapper.py  test_perturbation.py  test_preprocess.py  test_preprocessing.py  test_sampling.py  test_sharding.py  test_streaming.py
tests/test_eval/: conftest.py  test_base.py  test_callback.py  test_cz_benchmarks.py  test_embedding_quality.py  test_grn.py  test_harness.py  test_linear_probe.py  test_perturbation.py  test_registry.py  test_utils.py
tests/test_finetuning/: conftest.py  test_finetuning.py  test_lora.py
tests/test_models/: conftest.py  test_attention_integration.py  test_autoregressive.py  test_custom_attention.py  test_embeddings.py  test_heads.py  test_hub.py  test_masked_autoencoder.py  test_model_registry.py  test_protocol.py  test_transformer_encoder.py
tests/test_tokenizers/: conftest.py  test_base_tokenizer.py  test_binned_expression.py  test_binning_utils.py  test_continuous_projection.py  test_gene_embedding.py  test_masking.py  test_rank_value.py  test_registry.py
tests/test_training/: conftest.py  test_callbacks.py  test_data_module.py  test_fsdp.py  test_lightning_module.py  test_optimizers.py  test_pipeline.py
tests/test_zoo/: conftest.py  test_base.py  test_env_registry.py  test_geneformer.py  test_integration.py  test_isolation.py  test_registry.py  test_scfoundation.py  test_scgpt.py  test_scprint.py  test_stack.py  test_uce.py  test_utils.py  test_worker.py  test_zoo_cli.py
(+23 files in other folders)
